--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "expo-font": "^7.0.0",
+    "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-native": "0.59.4"
   },
