--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "expo-font": "^7.0.0",
     "native-base": "^2.13.8",
     "react": "16.8.3",
-    "react-native": "0.59.4"
+    "react-native": "0.59.4",
+    "react-native-chart-kit": "^3.6.1",
+    "react-native-svg": "^9.10.2",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
