--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.59.4",
     "react-native-chart-kit": "^3.6.1",
     "react-native-svg": "^9.10.2",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
